# Farm-Intelligence-Platform

./: .coveragerc  .dmypy.json  .dockerignore  .env.compose.example  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_STAC_RASTER_PNG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Dockerfile.ci  LICENSE  Makefile  NDVI_PIPELINE_IMPLEMENTATION_STATUS.md  NDVI_RETRY_POLICY_STATUS.md  PHASE_2_ARCHITECTURE_REVIEW.md  README.md  SECURITY.md  STAGE_1_GAP_ANALYSIS.md  TESTING.md  caddy.json  celery_metrics.py  coverage.xml  coverage_new.xml  docker-compose.monitoring.yml  docker-compose.redis-sentinel.yml  docker-compose.yml  import_dashboards.py  openapi.json  prometheus.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  schema.yml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
.opencode/: run-agent.sh
.qwen/: settings.json
accounts/: README.md  views.py
activities/: README.md  __init__.py  apps.py  authentication.py  circuit_breaker.py  consumers.py  dead_letter.py  metrics.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
activities/handlers/: __init__.py  base.py  fertilizer.py  irrigation.py  ndvi_trigger.py  registry.py  vaccination.py
activities/migrations/: 0001_initial.py  0002_execution_model.py  0003_add_cron_expression.py
activities/tests/: __init__.py  test_activities.py  test_consumers.py  test_dead_letter_extra.py  test_handlers.py  test_metrics.py  test_phase5.py  test_services.py
alerts/: README.md  admin.py  apps.py  metrics.py  models.py  serializers.py  services.py  tasks.py  triggers.py  tts.py  tts_breaker.py  urls.py  views.py
alerts/migrations/: 0001_initial.py  0002_audio_alert_delivery_tracking.py
alerts/tests/: conftest.py  test_branches.py  test_metrics.py  test_models.py  test_privacy.py  test_purge_tasks.py  test_render_task.py  test_services.py  test_subscription_filter.py  test_tasks.py  test_triggers.py  test_tts.py  test_tts_breaker.py  test_views.py
api_keys/: README.md  auth.py
config/: asgi.py  celery.py  celery_metrics.py  prometheus.py  settings.py  urls.py  views.py  wsgi.py
config/api/: exceptions.py  openapi.py  pagination.py  proxy.py  request_id.py  responses.py
config/tests/: test_request_id.py
docs/: HMAC_INTEGRATION_SPEC.md  PROXY_HEADERS.md  README.md  contributing_ndvi_engines.md  contributing_weather_engines.md  devops.md  hmac_audit.md  hmac_clean_setup.md  monitoring.md  redis-sentinel-testing.md  reverse-proxy.md
docs/architecture/: PHASE_2_ARCHITECTURE_REVIEW.md  STAGE_1_GAP_ANALYSIS.md  STAGE_3_STREAM_PRODUCER_PLAN.md  automation_architecture.md  ndvi-data-lifecycle-plan.md  ndvi-phase-2-implementation-plan.md  ndvi-phase3-execution-plan.md  ndvi-phase3-fallback-execution-plan.md  ndvi-phase4-fusion-execution-plan.md  ndvi-pipeline-evolution.md  ndvi-system-evolution-phased-spec.md
docs/audits/: AUDIT_STAC_RASTER_PNG.md  FIX_STAC_RASTER_PNG.md
docs/security/: nextcloud-hmac.md
docs/status/: ACTIVITIES_NDVI_INTEGRATION_STATUS.md  NDVI_PIPELINE_IMPLEMENTATION_STATUS.md  NDVI_RETRY_POLICY_STATUS.md
farms/: README.md  activity_views.py  apps.py  authentication.py  models.py  observation_views.py  openapi.py  permissions.py  serializers.py  sync_views.py  urls.py  views.py
farms/migrations/: 0002_farmobservation.py  0003_farmintegrationaccess.py  0004_farm_external_farm_id_farm_external_user_id.py  0005_farmsyncidempotencyrecord.py  0006_increase_area_ha_precision.py
farms/tests/: __init__.py  test_farm_activity_views.py  test_farm_observation_views.py  test_farm_observations_api.py  test_farm_sync_api.py  test_farms_authentication.py  test_farms_sync_views.py  test_farms_unit.py  test_farms_views.py
grafana/dashboards/: farm-intelligence-platform-ndvi.json  farm-intelligence-platform-ndwi.json  farm-intelligence-platform-observability.json  farm-intelligence-platform-radio.json  farm-intelligence-platform-system.json  hungry-endpoints.json  (+5 more)
integrations/: apps.py  authentication.py  config.py  hmac.py  openapi.py  permissions.py  tokens.py  urls.py  views.py
monitoring/: README.md
ndvi/: README.md  admin.py  apps.py  cache.py  circuit_breaker.py  farm_state.py  farm_state_ndmi.py  farm_state_ndwi.py  fusion.py  fusion_ndwi.py  fusion_ndwi.py,cover  logging.py  metrics.py  models.py  proxy_views.py  quality_ndwi.py  retry_policy.py  sentinel1_context.py  serializers.py  services.py  stac_client.py  streams.py  tasks.py  urls.py  v2_quality.py  views.py
ops/: runbook.md
podcasts/: README.md  admin.py  apps.py  metrics.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
prompts/: 2026-06-24-daily-report.md  2026-06-25-daily-report.md  cron-activity-implementation.md  ndvi_phase3_followup_round5_report.md
radio/: README.md  __init__.py  admin.py  apps.py  metrics.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
reports/: 2025-12-17.md  2025-12-18.md  2025-12-19.md  2025-12-22.md  2025-12-25.md  2025-12-26.md  2025-12-30.md  2025-12-31.md  2026-01-01.md  2026-01-03.md  2026-01-06.md  2026-01-07.md  2026-01-08.md  2026-01-09.md  2026-01-16.md  2026-01-17.md  2026-01-30.md  2026-01-31.md  2026-02-03.md  2026-02-04.md  2026-02-13.md  2026-03-06.md  2026-03-16.md  2026-03-22.md  2026-03-26.md  2026-04-01.md  2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-20.md  2026-04-21.md  2026-04-25.md  2026-04-26.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  (+44 more)
scripts/: agent-watchdog.sh  check_celery_tasks.py  daily-report.sh  install-agent-watchdog.sh  remove-agent-watchdog.sh  run-ci.sh  run_daphne_tls.sh  typecheck.sh
tests/: test_accounts.py  test_api_keys.py  test_celery_metrics.py  test_config_api.py  test_config_prometheus.py  test_farms.py  test_manage.py  test_settings_ndvi_stac.py  test_settings_redis_sentinel.py
weather/: README.md  farm_views.py  serializers.py  services.py  tasks.py  urls.py  views.py
(+214 files in other folders)
