[project]
name = "farm-intelligence-platform"
version = "0.1.0"
description = "Backend Django/DRF service for farm intelligence: NDVI/NDWI satellite analysis, weather, farm management, alerts, and integrations."
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
  "Django==5.1.15",
  "dj-database-url==3.1.0",
  "djangorestframework==3.16.1",
  "djangorestframework-simplejwt==5.5.1",
  "drf-spectacular==0.29.0",
  "django-prometheus==2.4.1",
  "django-redis==5.4.0",
  "httpx==0.28.1",
  "feedparser==6.0.11",
  "matplotlib==3.10.8",
  "python-dotenv==1.2.2",
  "django-environ==0.12.1",
]

[dependency-groups]
dev = [
  "affine==2.4.0",
  "amqp==5.3.1",
  "anyio==4.12.1",
  "asgiref==3.11.1",
  "attrs==25.4.0",
  "autobahn==25.12.2",
  "Automat==25.4.16",
  "bandit==1.9.3",
  "billiard==4.2.4",
  "black==26.3.1",
  "boto3==1.42.39",
  "botocore==1.42.39",
  "brotli==1.2.0",
  "cbor2==5.9.0",
  "celery==5.6.2",
  "certifi==2025.11.12",
  "cffi==2.0.0",
  "cfgv==3.5.0",
  "charset-normalizer==3.4.4",
  "click==8.3.1",
  "click-didyoumean==0.3.1",
  "click-plugins==1.1.1.2",
  "click-repl==0.3.0",
  "cligj==0.7.2",
  "constantly==23.10.4",
  "contourpy==1.3.3",
  "coverage==7.13.4",
  "cron-descriptor==1.4.5",
  "cryptography==48.0.1",
  "cycler==0.12.1",
  "daphne==4.1.2",
  "distlib==0.4.0",
  "dj-database-url==3.1.0",
  "Django==5.1.15",
  "django-celery-beat==2.9.0",
  "django-environ==0.12.1",
  "django-extensions==4.1",
  "django-prometheus==2.4.1",
  "django-redis==5.4.0",
  "django-stubs==5.2.9",
  "django-stubs-ext==5.2.9",
  "django-timezone-field==7.2.1",
  "djangorestframework==3.16.1",
  "djangorestframework-stubs==3.16.8",
  "djangorestframework_simplejwt==5.5.1",
  "dotenv==0.9.9",
  "drf-spectacular==0.29.0",
  "filelock==3.24.2",
  "fonttools==4.62.1",
  "gunicorn==25.1.0",
  "h11==0.16.0",
  "h2==4.3.0",
  "hpack==4.1.0",
  "httpcore==1.0.9",
  "httptools==0.7.1",
  "httpx==0.28.1",
  "hyperframe==6.1.0",
  "hyperlink==21.0.0",
  "identify==2.6.16",
  "idna==3.15",
  "Incremental==24.11.0",
  "inflection==0.5.1",
  "iniconfig==2.3.0",
  "jmespath==1.1.0",
  "jsonschema==4.26.0",
  "jsonschema-specifications==2025.9.1",
  "kiwisolver==1.5.0",
  "kombu==5.6.2",
  "librt==0.8.0",
  "markdown-it-py==4.0.0",
  "matplotlib==3.10.8",
  "mdurl==0.1.2",
  "msgpack==1.2.1",
  "mypy==1.19.1",
  "mypy_extensions==1.1.0",
  "mysqlclient==2.2.8",
  "nodeenv==1.10.0",
  "numpy==2.4.2",
  "packaging==25.0",
  "pathspec==1.0.3",
  "pillow==12.2.0",
  "platformdirs==4.9.2",
  "pluggy==1.6.0",
  "pre_commit==4.5.1",
  "priority==1.3.0",
  "prometheus_client==0.24.1",
  "prompt_toolkit==3.0.52",
  "py-ubjson==0.16.1",
  "pyasn1==0.6.3",
  "pyasn1_modules==0.4.2",
  "pycparser==3.0",
  "Pygments==2.20.0",
  "PyJWT==2.13.0",
  "pyOpenSSL==26.2.0",
  "pyparsing==3.3.2",
  "pytest==9.0.3",
  "pytest-cov==7.0.0",
  "pytest-django==4.12.0",
  "pytest-env==1.3.2",
  "python-crontab==3.3.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.2",
  "pytokens==0.4.1",
  "PyYAML==6.0.3",
  "rasterio==1.5.0",
  "redis==5.3.1",
  "referencing==0.37.0",
  "requests==2.33.0",
  "rest-framework-simplejwt==0.0.2",
  "rich==14.3.2",
  "rpds-py==0.30.0",
  "ruff==0.15.1",
  "s3transfer==0.16.0",
  "service-identity==24.2.0",
  "setuptools==80.10.2",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sqlparse==0.5.5",
  "stevedore==5.6.0",
  "Twisted==26.4.0rc2",
  "txaio==25.12.2",
  "types-PyYAML==6.0.12.20250915",
  "types-requests==2.32.4.20250913",
  "typing_extensions==4.15.0",
  "tzdata==2025.3",
  "tzlocal==5.3.1",
  "ujson==5.13.0",
  "uritemplate==4.2.0",
  "urllib3==2.7.0",
  "uvicorn==0.41.0",
  "uvloop==0.22.1",
  "vine==5.1.0",
  "virtualenv==20.36.1",
  "watchfiles==1.1.1",
  "wcwidth==0.6.0",
  "websockets==16.0",
  "wheel==0.46.3",
  "zope.interface==8.2",
  "channels==4.3.2",
  "channels-redis==4.3.0",
  "django-stubs[compatible-mypy]",
  "djangorestframework-stubs[compatible-mypy]",
]

[tool.black]
line-length = 79
target-version = ["py312"]
extend-exclude = '''
/(
  \.venv
| venv
| node_modules
| staticfiles
| dist
| build
| \.git
)/
'''

[tool.ruff]
line-length = 79
target-version = "py312"
exclude = ["**/migrations/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ANN"]
ignore = ["ANN401", "S603"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "ANN001", "ANN002", "ANN003"]

[tool.bandit]
skips = ["B101", "B105", "B106", "B107", "B110", "B605", "B607", "B311"]
exclude_dirs = [
  ".venv",
  "venv",
  "migrations",
  "node_modules",
  ".git",
]
severity = "MEDIUM"
confidence = "HIGH"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
disallow_any_unimported = true
ignore_missing_imports = false
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
explicit_package_bases = true
exclude = "(.venv|venv|node_modules)"

[tool.django-stubs]
django_settings_module = "config.mypy_settings"

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["alerts.tests.*", "*.tests.*", "tests.*"]
disable_error_code = ["no-untyped-def", "no-redef", "func-returns-value"]

[[tool.mypy.overrides]]
module = ["environ", "feedparser"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["celery", "celery.exceptions", "celery.schedules"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rasterio", "rasterio.*", "PIL", "PIL.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["activities.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["radio.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["django_prometheus", "django_prometheus.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["channels", "channels.*", "channels.auth", "channels.routing"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["daphne"]
ignore_missing_imports = true
